// Initial MVP data model for the volunteer CRM.
// A contact can hold a role within one or more groups.
//
// This file is the source of truth for the database schema. When the schema
// changes, update this model first, then bring database/schema.sql and any
// new file under database/migrations/ into line with it — never the other
// way around.

Enum family_relationship_type {
  child
  parent
  guardian
  other
}

Enum contact_status {
  active
  inactive
  archived
}

Enum contact_award_status {
  nominated
  approved
  presented
  declined
}

Enum user_account_status {
  invited
  active
  suspended
  closed
}

Enum identity_provider {
  google
  microsoft
}

Enum contact_phone_type {
  mobile
  home
  work
  other
}

Enum contact_address_type {
  home
  work
  other
}

Table contacts {
  id uuid [pk, default: `gen_random_uuid()`]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [unique]
  status contact_status [not null, default: 'active']
  can_login boolean [not null, default: false]
  hidden_from_directory boolean [not null, default: false, note: 'Opts the contact out of the organisation-wide address book entirely.']
  date_of_birth date
  preferred_name varchar [note: 'The name someone goes by, distinct from their legal first_name.']
  phonetic_name varchar [note: 'Free text phonetic spelling, e.g. "SHE-von" for "Siobhan" - no controlled vocabulary for pronunciation.']
  pronouns varchar [note: 'Free text rather than a fixed list, so it never fails to represent how someone describes themselves.']
  gender varchar [note: 'Free text, same reasoning as pronouns.']
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table user_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  contact_id uuid [not null, unique]
  status user_account_status [not null, default: 'invited']
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table user_identities {
  id uuid [pk, default: `gen_random_uuid()`]
  user_account_id uuid [not null, unique]
  provider identity_provider [not null]
  issuer varchar [not null]
  subject varchar [not null]
  email varchar [not null]
  email_verified boolean [not null]
  last_signed_in_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  indexes {
    (issuer, subject) [unique]
  }
}

Table invitations {
  id uuid [pk, default: `gen_random_uuid()`]
  user_account_id uuid [not null]
  invited_by_user_account_id uuid
  email varchar [not null]
  token_hash char(64) [not null, unique]
  expires_at timestamptz [not null, default: `now() + interval '7 days'`]
  accepted_at timestamptz
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table user_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_account_id uuid [not null]
  token_hash char(64) [not null, unique]
  expires_at timestamptz [not null, default: `now() + interval '12 hours'`]
  last_seen_at timestamptz [not null, default: `now()`]
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table role_types {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null, unique]
  description text
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table group_types {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null, unique]
  description text
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table groups {
  id uuid [pk, default: `gen_random_uuid()`]
  group_type_id uuid [not null]
  name varchar [not null]
  description text
  parent_id uuid
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  indexes {
    (parent_id, name) [unique]
  }
}

Table family_units {
  id uuid [pk, default: `gen_random_uuid()`]
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table award_types {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null, unique]
  description text
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table contact_roles_groups {
  id uuid [pk, default: `gen_random_uuid()`]
  contact_id uuid [not null]
  role_type_id uuid [not null]
  group_id uuid [not null]
  start_date date [not null]
  end_date date
  hidden_from_directory boolean [not null, default: false, note: 'Hides this one assignment from the address book while the contact otherwise appears via other roles.']
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  indexes {
    (contact_id, role_type_id, group_id, start_date) [unique]
  }
}

Table contact_family_units {
  id uuid [pk, default: `gen_random_uuid()`]
  contact_id uuid [not null]
  family_unit_id uuid [not null]
  relationship family_relationship_type [not null]
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  indexes {
    (contact_id, family_unit_id, relationship) [unique]
  }
}

Table contact_family_main_contacts {
  id uuid [pk, default: `gen_random_uuid()`]
  family_unit_id uuid [not null, note: 'The family unit this Main Contact tenure belongs to.']
  contact_id uuid [not null, note: 'Must be a current, non-child member of that family unit at write time — enforced by the application, not the schema.']
  start_date date [not null]
  end_date date [note: 'Null while this tenure is current. Changing Main Contact ends the previous row and starts a new one in the same transaction.']
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  indexes {
    (family_unit_id) [unique, note: 'Partial: WHERE end_date IS NULL. At most one current Main Contact per family unit — same shape as "one active Group Leader per group."']
  }
}

Table contact_phone_numbers {
  id uuid [pk, default: `gen_random_uuid()`]
  contact_id uuid [not null]
  phone_type contact_phone_type [not null]
  number varchar [not null]
  is_primary boolean [not null, default: false, note: 'Which of possibly several concurrent numbers is preferred - orthogonal to start_date/end_date.']
  start_date date [not null]
  end_date date [note: 'Null while current.']
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  indexes {
    (contact_id) [unique, note: 'Partial: WHERE is_primary AND end_date IS NULL. At most one current primary number per contact.']
  }
}

Table contact_addresses {
  id uuid [pk, default: `gen_random_uuid()`]
  contact_id uuid [not null]
  address_type contact_address_type [not null, default: 'home']
  line1 varchar [not null]
  line2 varchar
  city varchar
  region varchar
  postcode varchar
  country varchar
  start_date date [not null]
  end_date date [note: 'Null while current.']
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table contact_emergency_contacts {
  id uuid [pk, default: `gen_random_uuid()`]
  contact_id uuid [not null, note: 'Whose emergency contact this is.']
  emergency_contact_id uuid [not null, note: 'Who to contact - always a CRM contact, never free text.']
  priority integer [not null, note: '1 = primary, 2 = secondary, ...']
  relationship varchar [not null, note: 'Free text - not every emergency contact is an existing family relationship.']
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  indexes {
    (contact_id, priority) [unique]
    (contact_id, emergency_contact_id) [unique]
  }

  Note: 'CHECK constraint: contact_id <> emergency_contact_id. Not dated/historical unlike contact_phone_numbers/contact_addresses - removal is a hard DELETE, the one exception to this schema''s no-hard-deletion convention.'
}

Table contact_awards {
  id uuid [pk, default: `gen_random_uuid()`]
  contact_id uuid [not null]
  award_type_id uuid [not null]
  status contact_award_status [not null, default: 'nominated']
  nomination_date date [not null]
  presented_date date
  notes text
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  indexes {
    (contact_id, award_type_id) [unique]
  }
}

Table permissions {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null, unique]
  description text
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table access_roles {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null, unique]
  description text
  is_global boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table access_role_permissions {
  access_role_id uuid [not null]
  permission_id uuid [not null]

  indexes {
    (access_role_id, permission_id) [pk]
  }
}

Table user_access_role_assignments {
  id uuid [pk, default: `gen_random_uuid()`]
  user_account_id uuid [not null]
  access_role_id uuid [not null]
  group_id uuid
  start_date date [not null, default: `current_date`]
  end_date date
  hidden_from_directory boolean [not null, default: false, note: 'Hides this one assignment from the address book while the contact otherwise appears via other roles.']
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table audit_events {
  id uuid [pk, default: `gen_random_uuid()`]
  user_account_id uuid
  event_type varchar [not null]
  outcome varchar [not null]
  provider identity_provider
  subject varchar
  ip_address inet
  user_agent text
  details jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]
}

Ref: contact_roles_groups.contact_id > contacts.id
Ref: contact_roles_groups.role_type_id > role_types.id
Ref: contact_roles_groups.group_id > groups.id
Ref: groups.group_type_id > group_types.id
Ref: groups.parent_id > groups.id
Ref: contact_family_units.contact_id > contacts.id
Ref: contact_family_units.family_unit_id > family_units.id
Ref: contact_family_main_contacts.contact_id > contacts.id
Ref: contact_family_main_contacts.family_unit_id > family_units.id
Ref: contact_phone_numbers.contact_id > contacts.id
Ref: contact_addresses.contact_id > contacts.id
Ref: contact_emergency_contacts.contact_id > contacts.id
Ref: contact_emergency_contacts.emergency_contact_id > contacts.id
Ref: contact_awards.contact_id > contacts.id
Ref: contact_awards.award_type_id > award_types.id
Ref: user_accounts.contact_id - contacts.id
Ref: user_identities.user_account_id - user_accounts.id
Ref: invitations.user_account_id > user_accounts.id
Ref: invitations.invited_by_user_account_id > user_accounts.id
Ref: user_sessions.user_account_id > user_accounts.id
Ref: access_role_permissions.access_role_id > access_roles.id
Ref: access_role_permissions.permission_id > permissions.id
Ref: user_access_role_assignments.user_account_id > user_accounts.id
Ref: user_access_role_assignments.access_role_id > access_roles.id
Ref: user_access_role_assignments.group_id > groups.id
Ref: audit_events.user_account_id > user_accounts.id
